@@ -361,7 +361,8 @@ TARG_ENV_HFILES = \
 	config/te-sparcaout.h \
 	config/te-sun3.h \
 	config/te-svr4.h \
-	config/te-sysv32.h
+	config/te-sysv32.h \
+	config/te-tmips.h
 
 # Multi files in config
 
